--- a/css/src/_text.scss
+++ b/css/src/_text.scss
@@ -40,5 +40,48 @@ $base-font-size: 62.5%;
 }
 
 
+/* ==========================================================================
+Typography 
+(from normalize.css 2012-07-07T09:50 UTC - http://github.com/necolas/normalize.css )
+========================================================================== */
+
+/*
+* Addresses font sizes and margins set differently.
+*/
+
+h1 {
+    font-size: 2em;
+    margin: 0.67em 0;
+}
+
+h2 {
+    font-size: 1.5em;
+    margin: 0.83em 0;
+}
+
+h3 {
+    font-size: 1.17em;
+    margin: 1em 0;
+}
+
+h4 {
+    font-size: 1em;
+    margin: 1.33em 0;
+}
+
+h5 {
+    font-size: 0.83em;
+    margin: 1.67em 0;
+}
+
+h6 {
+    font-size: 0.75em;
+    margin: 2.33em 0;
+}
+
+
+small {
+    font-size: 75%;
+}
 
 
