fixed issues with last merge

--- a/_source/css/sass/_mootor.ui.scss
+++ b/_source/css/sass/_mootor.ui.scss
@@ -255,7 +255,7 @@
 // User Interface plugin
 
 // Checkbox
-.moo_checkbox {
+.moo-ui-switch{
     display: block;
     height: 28px;
     width: 94px;
