--- a/css/styles.css
+++ b/css/styles.css
@@ -704,7 +704,7 @@ a:focus {
 }
 
 /* line 258, ../_source/css/sass/_mootor.ui.scss */
-.moo_checkbox {
+.moo-ui-switch {
   display: block;
   height: 28px;
   width: 94px;
@@ -712,7 +712,7 @@ a:focus {
   float: right;
 }
 /* line 265, ../_source/css/sass/_mootor.ui.scss */
-.moo_checkbox b {
+.moo-ui-switch b {
   -webkit-transition-duration: .25s;
   background: url(../img/ui/switch.png);
   height: 28px;
@@ -721,11 +721,11 @@ a:focus {
   -webkit-transform: translate3d(0, 0, 0);
 }
 /* line 274, ../_source/css/sass/_mootor.ui.scss */
-.moo_checkbox.off b {
+.moo-ui-switch.off b {
   -webkit-transform: translate3d(-54px, 0, 0);
 }
 /* line 277, ../_source/css/sass/_mootor.ui.scss */
-.moo_checkbox label {
+.moo-ui-switch label {
   line-height: 28px;
 }
 
