--- a/index.haml
+++ b/index.haml
@@ -33,7 +33,7 @@
                     .moo-field
                         %label Input Switch
                         .moo-ui-switch#moo-ui-switch-1
-                            %input{:type=>"checkbox", :name=>"switch1" ,:value=>"1"}  
+                            %input{:type=>"checkbox", :name=>"switch1" ,:value=>"1"}    
                     .moo-field
                         %label Input de texto
                         .moo-ui-text#moo-ui-text-1
@@ -199,7 +199,7 @@
                     .moo-field
                         %label Tooltip
                         #radiobtn
-                            %span#tooltipTest Show me the tooltip!
+                            %spantooltipTest Show me the tooltip!
         /
             .moo-panel#nav
                 %nav
