--- a/css/src/_text.scss
+++ b/css/src/_text.scss
@@ -1,47 +1,10 @@
-// Text mixins and vars
+// Text variables 
+// --------------------------------------------------------------------------
 
- 
 $base-font: Helvetica, Arial, sans-serif; 
 $readable-font: 'Palatino Linotype', 'Book Antiqua', Palatino, 'Droid Serif', serif;
 $base-font-size: 62.5%;
-$base-line-height: 140%; 
-
-@mixin baseType { 
-  line-height: $base-line-height ;  
-}
-
-// Type 1
-@mixin domType1 {
-  @include baseType;
-  font-size: 2.6em ;
-}
-@mixin subType1 {
-  @include baseType;
-  font-size: 3em ;
-}
-
-@mixin empType1 {
-  @include baseType;
-  font-size: 7em ;
-  letter-spacing: -0.1em;
-}
-@mixin readableType {
-  @include baseType;
-  font-size: 3em ;
-  text-align: justify;
-  padding: 1em ;
-  line-height: 150%;
-  font-family: $readable-font;
-  letter-spacing: 0;
-}
-
-// Type 2
-@mixin empType2 { 
-   @include baseType;
-   font-size: 4em;
-   text-decoration: none;
-   text-shadow: 0px 0px 1px $text1;
-}
+$base-line-height: 1.231; 
 
 
 /* ==========================================================================
@@ -63,7 +26,7 @@ h1 {
     font-size: 2.3em;
     letter-spacing: -0.07em;
     text-align: center;
-    margin: 0.67em 0;
+    margin: 0.75em 0;
 }
 
 h2 {
@@ -72,12 +35,12 @@ h2 {
 }
 
 h3 {
-    font-size: 1.5em;
+    font-size: 1.83em;
     margin: 0.67em 0;
 }
 
 h4 {
-    font-size: 1.15em;
+    font-size: 1.5em;
     margin: 1.33em 0;
 }
 
@@ -92,7 +55,12 @@ h6 {
 }
 
 p {
-    @include readableType;
+    font-size: 3em ;
+    text-align: justify;
+    padding: 1em ;
+    line-height: 150%;
+    font-family: $readable-font;
+    letter-spacing: 0;
 }
 small {
     font-size: 75%;
